// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonCircleLink /> snapshot should match snapshot 1`] = `
<ButtonCircleLink
  href="https://www.webex.com"
>
  <Link
    aria-disabled={false}
    className="md-button-circle-link-wrapper md-button-circle-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-inverted={false}
    data-multiple-children={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
    hasExternalLinkIcon={false}
    href="https://www.webex.com"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <a
          aria-disabled={false}
          className="md-link-wrapper md-button-circle-link-wrapper md-button-circle-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-inverted={false}
          data-multiple-children={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          href="https://www.webex.com"
          rel=""
        />
      </FocusRing>
    </FocusRing>
  </Link>
</ButtonCircleLink>
`;

exports[`<ButtonCircleLink /> snapshot should match snapshot when a ghost 1`] = `
<ButtonCircleLink
  ghost={true}
  href="https://www.webex.com"
>
  <Link
    aria-disabled={false}
    className="md-button-circle-link-wrapper md-button-circle-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={true}
    data-inverted={false}
    data-multiple-children={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
    hasExternalLinkIcon={false}
    href="https://www.webex.com"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <a
          aria-disabled={false}
          className="md-link-wrapper md-button-circle-link-wrapper md-button-circle-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={true}
          data-inverted={false}
          data-multiple-children={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          href="https://www.webex.com"
          rel=""
        >
          X
        </a>
      </FocusRing>
    </FocusRing>
  </Link>
</ButtonCircleLink>
`;

exports[`<ButtonCircleLink /> snapshot should match snapshot when a ghost and disabled 1`] = `
<ButtonCircleLink
  disabled={true}
  ghost={true}
  href="https://www.webex.com"
>
  <Link
    aria-disabled={false}
    className="md-button-circle-link-wrapper md-button-circle-wrapper"
    data-color="primary"
    data-disabled={true}
    data-ghost={true}
    data-inverted={false}
    data-multiple-children={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
    disabled={true}
    hasExternalLinkIcon={false}
    href="https://www.webex.com"
  >
    <FocusRing
      disabled={true}
    >
      <FocusRing
        disabled={true}
        focusClass="md-focus-ring-wrapper-disabled"
        focusRingClass="md-focus-ring-wrapper-disabled"
      >
        <a
          aria-disabled={false}
          className="md-link-wrapper md-button-circle-link-wrapper md-button-circle-wrapper"
          data-color="primary"
          data-disabled={true}
          data-ghost={true}
          data-inverted={false}
          data-multiple-children={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          href="https://www.webex.com"
          rel=""
        >
          X
        </a>
      </FocusRing>
    </FocusRing>
  </Link>
</ButtonCircleLink>
`;

exports[`<ButtonCircleLink /> snapshot should match snapshot when color is outlined 1`] = `
<ButtonCircleLink
  href="https://www.webex.com"
  outline={true}
>
  <Link
    aria-disabled={false}
    className="md-button-circle-link-wrapper md-button-circle-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-inverted={false}
    data-multiple-children={false}
    data-outline={true}
    data-shallow-disabled={false}
    data-size={40}
    hasExternalLinkIcon={false}
    href="https://www.webex.com"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <a
          aria-disabled={false}
          className="md-link-wrapper md-button-circle-link-wrapper md-button-circle-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-inverted={false}
          data-multiple-children={false}
          data-outline={true}
          data-shallow-disabled={false}
          data-size={40}
          href="https://www.webex.com"
          rel=""
        >
          X
        </a>
      </FocusRing>
    </FocusRing>
  </Link>
</ButtonCircleLink>
`;

exports[`<ButtonCircleLink /> snapshot should match snapshot when color is outlined and inverted is set 1`] = `
<ButtonCircleLink
  href="https://www.webex.com"
  inverted={true}
  outline={true}
>
  <Link
    aria-disabled={false}
    className="md-button-circle-link-wrapper md-button-circle-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-inverted={true}
    data-multiple-children={false}
    data-outline={true}
    data-shallow-disabled={false}
    data-size={40}
    hasExternalLinkIcon={false}
    href="https://www.webex.com"
    inverted={true}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <a
          aria-disabled={false}
          className="md-link-wrapper md-button-circle-link-wrapper md-button-circle-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-inverted={true}
          data-multiple-children={false}
          data-outline={true}
          data-shallow-disabled={false}
          data-size={40}
          href="https://www.webex.com"
          rel=""
        />
      </FocusRing>
    </FocusRing>
  </Link>
</ButtonCircleLink>
`;

exports[`<ButtonCircleLink /> snapshot should match snapshot when disabled 1`] = `
<ButtonCircleLink
  disabled={true}
  href="https://www.webex.com"
>
  <Link
    aria-disabled={false}
    className="md-button-circle-link-wrapper md-button-circle-wrapper"
    data-color="primary"
    data-disabled={true}
    data-ghost={false}
    data-inverted={false}
    data-multiple-children={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
    disabled={true}
    hasExternalLinkIcon={false}
    href="https://www.webex.com"
  >
    <FocusRing
      disabled={true}
    >
      <FocusRing
        disabled={true}
        focusClass="md-focus-ring-wrapper-disabled"
        focusRingClass="md-focus-ring-wrapper-disabled"
      >
        <a
          aria-disabled={false}
          className="md-link-wrapper md-button-circle-link-wrapper md-button-circle-wrapper"
          data-color="primary"
          data-disabled={true}
          data-ghost={false}
          data-inverted={false}
          data-multiple-children={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          href="https://www.webex.com"
          rel=""
        >
          X
        </a>
      </FocusRing>
    </FocusRing>
  </Link>
</ButtonCircleLink>
`;

exports[`<ButtonCircleLink /> snapshot should match snapshot with className 1`] = `
<ButtonCircleLink
  className="example-class"
  href="https://www.webex.com"
>
  <Link
    aria-disabled={false}
    className="md-button-circle-link-wrapper md-button-circle-wrapper example-class"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-inverted={false}
    data-multiple-children={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
    hasExternalLinkIcon={false}
    href="https://www.webex.com"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <a
          aria-disabled={false}
          className="md-link-wrapper md-button-circle-link-wrapper md-button-circle-wrapper example-class"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-inverted={false}
          data-multiple-children={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          href="https://www.webex.com"
          rel=""
        />
      </FocusRing>
    </FocusRing>
  </Link>
</ButtonCircleLink>
`;

exports[`<ButtonCircleLink /> snapshot should match snapshot with color 1`] = `
<ButtonCircleLink
  color="message"
  href="https://www.webex.com"
>
  <Link
    aria-disabled={false}
    className="md-button-circle-link-wrapper md-button-circle-wrapper"
    data-color="message"
    data-disabled={false}
    data-ghost={false}
    data-inverted={false}
    data-multiple-children={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
    hasExternalLinkIcon={false}
    href="https://www.webex.com"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <a
          aria-disabled={false}
          className="md-link-wrapper md-button-circle-link-wrapper md-button-circle-wrapper"
          data-color="message"
          data-disabled={false}
          data-ghost={false}
          data-inverted={false}
          data-multiple-children={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          href="https://www.webex.com"
          rel=""
        >
          X
        </a>
      </FocusRing>
    </FocusRing>
  </Link>
</ButtonCircleLink>
`;

exports[`<ButtonCircleLink /> snapshot should match snapshot with id 1`] = `
<ButtonCircleLink
  href="https://www.webex.com"
  id="example-id"
>
  <Link
    aria-disabled={false}
    className="md-button-circle-link-wrapper md-button-circle-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-inverted={false}
    data-multiple-children={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
    hasExternalLinkIcon={false}
    href="https://www.webex.com"
    id="example-id"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <a
          aria-disabled={false}
          className="md-link-wrapper md-button-circle-link-wrapper md-button-circle-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-inverted={false}
          data-multiple-children={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          href="https://www.webex.com"
          id="example-id"
          rel=""
        />
      </FocusRing>
    </FocusRing>
  </Link>
</ButtonCircleLink>
`;

exports[`<ButtonCircleLink /> snapshot should match snapshot with size 1`] = `
<ButtonCircleLink
  href="https://www.webex.com"
  size={64}
>
  <Link
    aria-disabled={false}
    className="md-button-circle-link-wrapper md-button-circle-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-inverted={false}
    data-multiple-children={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={64}
    hasExternalLinkIcon={false}
    href="https://www.webex.com"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <a
          aria-disabled={false}
          className="md-link-wrapper md-button-circle-link-wrapper md-button-circle-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-inverted={false}
          data-multiple-children={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={64}
          href="https://www.webex.com"
          rel=""
        >
          X
        </a>
      </FocusRing>
    </FocusRing>
  </Link>
</ButtonCircleLink>
`;

exports[`<ButtonCircleLink /> snapshot should match snapshot with style 1`] = `
<ButtonCircleLink
  href="https://www.webex.com"
  style={
    Object {
      "color": "pink",
    }
  }
>
  <Link
    aria-disabled={false}
    className="md-button-circle-link-wrapper md-button-circle-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-inverted={false}
    data-multiple-children={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
    hasExternalLinkIcon={false}
    href="https://www.webex.com"
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <a
          aria-disabled={false}
          className="md-link-wrapper md-button-circle-link-wrapper md-button-circle-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-inverted={false}
          data-multiple-children={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          href="https://www.webex.com"
          rel=""
          style={
            Object {
              "color": "pink",
            }
          }
        />
      </FocusRing>
    </FocusRing>
  </Link>
</ButtonCircleLink>
`;

exports[`<ButtonCircleLink /> snapshot should match snapshot with title 1`] = `
<ButtonCircleLink
  href="https://www.webex.com"
  title="Example Text"
>
  <Link
    aria-disabled={false}
    className="md-button-circle-link-wrapper md-button-circle-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-inverted={false}
    data-multiple-children={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
    hasExternalLinkIcon={false}
    href="https://www.webex.com"
    title="Example Text"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <a
          aria-disabled={false}
          className="md-link-wrapper md-button-circle-link-wrapper md-button-circle-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-inverted={false}
          data-multiple-children={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          href="https://www.webex.com"
          rel=""
          title="Example Text"
        />
      </FocusRing>
    </FocusRing>
  </Link>
</ButtonCircleLink>
`;
